containers/go/sample-project/kubernetes-basic/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-sample
  labels:
    name: go-sample
    app: cleanstart-go-sample
