containers/go/sample-project/kubernetes-basic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-sample-service
  namespace: go-sample
  labels:
    app: cleanstart-go-sample
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: cleanstart-go-sample
    version: v1
