containers/go/sample-project/kubernetes-basic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-sample-ingress
  namespace: go-sample
  labels:
    app: cleanstart-go-sample
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: go-sample.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-sample-service
            port:
              number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-sample-service
            port:
              number: 80
